# remy

./: .gitignore  .travis.yml  10.out  100.out  2.out  20.out  50.out  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  TODO  _rec_send_ewma,_slow_rec_rec_ewma.out  _rec_send_ewma,_slow_rec_rec_ewma.out.0  _rec_send_ewma,_slow_rec_rec_ewma.out.1  _rec_send_ewma,_slow_rec_rec_ewma.out.2  _rec_send_ewma,_slow_rec_rec_ewma.out.3  _rec_send_ewma,_slow_rec_rec_ewma.out.4  _rec_send_ewma,_slow_rec_rec_ewma.out.5  aclocal.m4  build-package.sh  competewithpersistent.dna.5  config.h  config.h.in  config.status  configure  configure.ac  delay.cc  delay.hh  dna.proto  dumbsender.cc  dumbsender.hh  emil-templates.cc  emil-tester.cc  emil.cc  emil.hh  evaluator.cc  evaluator.hh  exponential.hh  (+83 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  control  copyright  rules
dnafiles/: absolute-intersend.dna.8
graph/: Makefile.am  bb100.hh  cairo_objects.cc  cairo_objects.hh  display.cc  display.hh  fader.cc  fader.hh  figure.cc  figure.hh  gl_objects.cc  gl_objects.hh  graph.cc  graph.hh  image.cc  image.hh  ratatouille.cc
protobufs/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  answer.pb.cc  answer.pb.h  answer.proto  dna.pb.cc  dna.pb.h  dna.proto  problem.pb.cc  problem.pb.h  problem.proto  simulationresults.proto
protobufs/.deps/: answer.pb.Po  dna.pb.Po  problem.pb.Po
python/: midi_mixer.py
scripts/: .gitignore  Makefile.am  datautils.py  list_plots.py  plot.py  plot_log.py  ratrunner_runner.py  remy_tool_runner.py  senderrunner_runner.py  utils.py
scripts/originals/: linkspeed100x.plot  linkspeedcubic.plot  linkspeedcubicsfqCoDel.plot
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  action.hh  aimd-templates.cc  aimd.cc  aimd.hh  batch-runner.cc  batch_test.sh  breeder.cc  breeder.hh  buffer-inputrange.cc  configrange.cc  configrange.hh  configvector.cc  configvector.hh  constants.cc  constants.hh  cycle-finder.cc  cycle-finder.hh  delay.hh  dna-creator.cc  evaluator.cc  evaluator.hh  exception.hh  exponential.hh  fader-templates.cc  fader.cc  fader.hh  fin.cc  fin.hh  find-cycles.cc  fintree.cc  fintree.hh  fish-templates.cc  fish.cc  fish.hh  fishbreeder.cc  (+68 more)
src/.deps/: aimd-templates.Po  aimd.Po  configrange.Po  evaluator.Po  jitter-templates.Po  link-templates.Po  memory.Po  memoryrange.Po  network.Po  queue-templates.Po  queue.Po  random.Po  rat-runner.Po  rat-templates.Po  rat.Po  ratbreeder.Po  receiver.Po  remy.Po  scoring-example.Po  sendergang.Po  sendergangofgangs.Po  whisker.Po  whiskertree.Po
synthetic-rats/: synthetic.dna
tests/: Makefile.am  RemyCC-2013-delta0.1.dna  RemyCC-2013-delta1.dna  RemyCC-2013-delta10.dna  RemyCC-2014-100x.dna  maintain-2013-results  run-plot-script.py  verify-2014-10.test  verify-2014-100x-results  verify-2014-100x-results.pm  verify-2014-185.test  verify-2014-2.test  verify-2014-29.test  verify-2014-300.test  verify-2014-401.test  verify-2014-802.test
unittests/: Makefile.am  http_tester.cc  mock_remy.cc
utility/: util1
