dist_check_SCRIPTS = verify-2014-100x-results.pm maintain-2013-results run-plot-script.py \
	verify-2014-2.test \
	verify-2014-10.test \
	verify-2014-29.test \
	verify-2014-185.test \
	verify-2014-300.test \
	verify-2014-401.test \
	verify-2014-802.test

EXTRA_DIST = RemyCC-2013-delta0.1.dna \
	RemyCC-2013-delta10.dna \
	RemyCC-2013-delta1.dna \
	RemyCC-2014-100x.dna

TESTS = maintain-2013-results \
	verify-2014-2.test \
	verify-2014-10.test \
	verify-2014-29.test \
	verify-2014-185.test \
	verify-2014-300.test \
	verify-2014-401.test \
	verify-2014-802.test \
	run-plot-script.py
